Added Authentification to Journal End Points